# advent-of-code-2023

./: .gitignore
day01/: Trebuchet.hs
day02/: Cubes.hs  day02.cabal
day03/: GondolaMotor.hs  day03.cabal
day04/: Scratchcards.hs  day04.cabal
day05/: Seeds.hs  day05.cabal
day06/: BoatRaces.hs  day06.cabal
day07/: CamelCards.hs  day07.cabal
day08/: Sandstorm.hs  day08.cabal
day09/: Sequences.hs  day09.cabal
day10/: Pipes.hs  day10.cabal
day11/: Galaxies.hs  day11.cabal
day12/: HotSprings.hs  day12.cabal
day13/: Mirrors.hs  day13.cabal
day14/: MirrorsAndRocks.hs  day14.cabal
day15/: Hash.hs  day15.cabal
day16/: Beam.hs  day16.cabal
day17/: Heat.hs  day17.cabal
day18/: Lagoon.hs  day18.cabal
day19/: Parts.hs  day19.cabal
day20/: Pulses.hs  day20.cabal
day21/: Steps.hs  day21.cabal
day22/: SandBricks.hs  day22.cabal
day23/: Hike.hs  day23.cabal
day24/: GaussElimination.hs  Hail.hs  day24.cabal  stack.yaml
day25/: Wires.hs  day25.cabal
