cabal-version:      2.4
name:               day07
version:            0.1.0.0
author:             davidaf3

executable day07
    main-is:          CamelCards.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
