cabal-version:      2.4
name:               day08
version:            0.1.0.0
author:             davidaf3

executable day08
    main-is:          Sandstorm.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
    ghc-options: -O2
