cabal-version:      2.4
name:               day10
version:            0.1.0.0
author:             davidaf3

executable day10
    main-is:          Pipes.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , vector
                    , containers
                    , mtl
    default-language: Haskell2010
