cabal-version:      2.4
name:               day11
version:            0.1.0.0
author:             davidaf3

executable day11
    main-is:          Galaxies.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
                    , vector
    default-language: Haskell2010
