cabal-version:      2.4
name:               day12
version:            0.1.0.0
author:             davidaf3

executable day12
    main-is:          HotSprings.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
                    , mtl
    default-language: Haskell2010
    ghc-options:      -O2