cabal-version:      2.4
name:               day14
version:            0.1.0.0
author:             davidaf3

executable day14
    main-is:          MirrorsAndRocks.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
    default-language: Haskell2010
