cabal-version:      2.4
name:               day16
version:            0.1.0.0
author:             davidaf3

executable day16
    main-is:          Beam.hs
    build-depends:    base ^>=4.17.2.0
                    , containers
                    , vector
    default-language: Haskell2010
    ghc-options:      -O2
