cabal-version:      2.4
name:               day17
version:            0.1.0.0
author:             davidaf3

executable day17
    main-is:          Heat.hs
    build-depends:    base ^>=4.17.2.0
                    , vector
                    , pqueue
                    , containers
    default-language: Haskell2010
    ghc-options:      -O2
