cabal-version:      3.0
name:               day18
version:            0.1.0.0
author:             davidaf3

executable day18
    main-is:          Lagoon.hs
    build-depends:    base ^>=4.17.2.0
                    , gloss
                    , megaparsec
                    , containers
    default-language: Haskell2010
