cabal-version:      3.0
name:               day21
version:            0.1.0.0
author:             davidaf3

executable day21
    main-is:          Steps.hs
    build-depends:    base ^>=4.17.2.0
                    , vector
                    , containers
    default-language: Haskell2010
    ghc-options:      -O2
