cabal-version:      3.0
name:               day25
version:            0.1.0.0
author:             davidaf3

executable day25
    main-is:          Wires.hs
    build-depends:    base ^>=4.17.2.0
                    , megaparsec
                    , containers
                    , random
    default-language: Haskell2010
